versions/v4.0.0/boards/st/disco_l475_iot1/doc/index.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/boards/st/disco_l475_iot1/doc/index.html
original_path: boards/st/disco_l475_iot1/doc/index.html
---

# Disco L475 IOT01 (B-L475E-IOT01A)

Board Overview

[![../../../../_images/disco_l475_iot1.jpg](https://docs.zephyrproject.org/4.0.0/_images/disco_l475_iot1.jpg)
](https://docs.zephyrproject.org/4.0.0/_images/disco_l475_iot1.jpg)

Disco L475 IOT01 (B-L475E-IOT01A)

Vendor:
:   STMicroelectronics

Architecture:
:   arm

SoC:
:   stm32l475xx

## Overview

The B-L475E-IOT01A Discovery kit for IoT node allows users to develop
applications with direct connection to cloud servers.
The Discovery kit enables a wide diversity of applications by exploiting
low-power communication, multiway sensing and ARM® Cortex®-M4 core-based
STM32L4 Series features.

This kit provides:

- 64-Mbit Quad-SPI (Macronix) Flash memory
- Bluetooth® V4.1 module (SPBTLE-RF)
- Sub-GHz (868 or 915 MHz) low-power-programmable RF module (SPSGRF-868 or SPSGRF-915)
- Wi-Fi® module Inventek ISM43362-M3G-L44 (802.11 b/g/n compliant)
- Dynamic NFC tag based on M24SR with its printed NFC antenna
- 2 digital omni-directional microphones (MP34DT01)
- Capacitive digital sensor for relative humidity and temperature (HTS221)
- High-performance 3-axis magnetometer (LIS3MDL)
- 3D accelerometer and 3D gyroscope (LSM6DSL)
- 260-1260 hPa absolute digital output barometer (LPS22HB)
- Time-of-Flight and gesture-detection sensor (VL53L0X)
- 2 push-buttons (user and reset)
- USB OTG FS with Micro-AB connector
- Expansion connectors:
  :   - Arduino™ Uno V3
      - PMOD
- Flexible power-supply options:
  :   - ST LINK USB VBUS or external sources
- On-board ST-LINK/V2-1 debugger/programmer with USB re-enumeration capability:
  :   - mass storage, virtual COM port and debug port

More information about the board can be found at the [Disco L475 IoT1 website](https://www.st.com/content/st_com/en/products/evaluation-tools/product-evaluation-tools/mcu-eval-tools/stm32-mcu-eval-tools/stm32-mcu-discovery-kits/b-l475e-iot01a.html).

## Hardware

The STM32L475VG SoC provides the following hardware IPs:

- Ultra-low-power with FlexPowerControl (down to 120 nA Standby mode and 100 uA/MHz run mode)
- Core: ARM® 32-bit Cortex®-M4 CPU with FPU, frequency up to 80 MHz, 100DMIPS/1.25DMIPS/MHz (Dhrystone 2.1)
- Clock Sources:
  :   - 4 to 48 MHz crystal oscillator
      - 32 kHz crystal oscillator for RTC (LSE)
      - Internal 16 MHz factory-trimmed RC ( ±1%)
      - Internal low-power 32 kHz RC ( ±5%)
      - Internal multispeed 100 kHz to 48 MHz oscillator, auto-trimmed by
        LSE (better than ±0.25 % accuracy)
      - 3 PLLs for system clock, USB, audio, ADC
- RTC with HW calendar, alarms and calibration
- Up to 24 capacitive sensing channels: support touchkey, linear and rotary touch sensors
- 16x timers:
  :   - 2x 16-bit advanced motor-control
      - 2x 32-bit and 5x 16-bit general purpose
      - 2x 16-bit basic
      - 2x low-power 16-bit timers (available in Stop mode)
      - 2x watchdogs
      - SysTick timer
- Up to 114 fast I/Os, most 5 V-tolerant, up to 14 I/Os with independent supply down to 1.08 V
- Memories
  :   - Up to 1 MB Flash, 2 banks read-while-write, proprietary code readout protection
      - Up to 128 KB of SRAM including 32 KB with hardware parity check
      - External memory interface for static memories supporting SRAM, PSRAM, NOR and NAND memories
      - Quad SPI memory interface
- 4x digital filters for sigma delta modulator
- Rich analog peripherals (independent supply)
  :   - 2x 12-bit ADC 5 MSPS, up to 16-bit with hardware oversampling, 200 uA/MSPS
      - 2x 12-bit DAC, low-power sample and hold
      - 2x operational amplifiers with built-in PGA
      - 2x ultra-low-power comparators
- 18x communication interfaces
  :   - USB OTG 2.0 full-speed, LPM and BCD
      - 2x SAIs (serial audio interface)
      - 3x I2C FM+(1 Mbit/s), SMBus/PMBus
      - 6x USARTs (ISO 7816, LIN, IrDA, modem)
      - 3x SPIs (4x SPIs with the Quad SPI)
      - CAN (2.0B Active) and SDMMC interface
      - SWPMI single wire protocol master I/F
- 14-channel DMA controller
- True random number generator
- CRC calculation unit, 96-bit unique ID
- Development support: serial wire debug (SWD), JTAG, Embedded Trace Macrocell™

More information about STM32L475VG can be found here:
:   - [STM32L475VG on www.st.com](https://www.st.com/en/microcontrollers-microprocessors/stm32l475vg.html)
    - [STM32L475 reference manual](https://www.st.com/resource/en/reference_manual/dm00083560.pdf)

### Supported Features

The Zephyr Disco L475 IoT board configuration supports the following hardware features:

| Interface | Controller | Driver/Component |
| --- | --- | --- |
| NVIC | on-chip | nested vector interrupt controller |
| UART | on-chip | serial port-polling; serial port-interrupt |
| PINMUX | on-chip | pinmux |
| GPIO | on-chip | gpio |
| FLASH | on-chip | flash memory |
| I2C | on-chip | i2c |
| SPI | on-chip | spi |
| PWM | on-chip | pwm |
| WATCHDOG | on-chip | independent watchdog |
| DAC | on-chip | DAC Controller |
| ADC | on-chip | adc |
| QSPI NOR | on-chip | off-chip flash |
| die-temp | on-chip | die temperature sensor |
| RTC | on-chip | rtc |

Other hardware features are not yet supported on this Zephyr port.

The default configuration can be found in the defconfig file:

> [boards/st/disco\_l475\_iot1/disco\_l475\_iot1\_defconfig](https://github.com/zephyrproject-rtos/zephyr/blob/main/boards/st/disco_l475_iot1/disco_l475_iot1_defconfig)

### Connections and IOs

Disco L475 IoT Board has 8 GPIO controllers. These controllers are responsible for pin muxing,
input/output, pull-up, etc.

Note that LED LD1 and SPI1 SCK use the same GPIO pin and cannot be used simultaneously.

#### Available pins:

For detailed information about available pins please refer to [STM32 Disco L475 IoT1 board User Manual](https://www.st.com/resource/en/user_manual/dm00347848.pdf).

#### Default Zephyr Peripheral Mapping:

- UART\_1 TX/RX : PB6/PB7 (ST-Link Virtual Port Com)
- UART\_4 TX/RX : PA0/PA1 (Arduino Serial)
- I2C1 SCL/SDA : PB8/PB9 (Arduino I2C)
- I2C2 SCL/SDA : PB10/PB11 (Sensor I2C bus)
- I2C3 SCL/SDA : PC0/PC1
- SPI1 NSS/SCK/MISO/MOSI : PA2/PA5/PA6/PA7 (Arduino SPI)
- SPI3 SCK/MISO/MOSI : PC10/PC11/PC12 (BT SPI bus)
- PWM\_2\_CH1 : PA15
- PWM\_15\_CH1 : PB14 (LD2)
- USER\_PB : PC13
- LD1 : PA5 (same as SPI1 SCK)
- LD2 : PB14
- ADC12\_IN5 : PA0
- ADC123\_IN3 : PC2
- ADC123\_IN4 : PC3
- ADC12\_IN13 : PC4
- ADC12\_IN14 : PC5
- DAC1\_OUT1 : PA4

#### System Clock

Disco L475 IoT System Clock could be driven by internal or external oscillator,
as well as main PLL clock. By default System clock is driven by PLL clock at 80MHz,
driven by 16MHz high speed internal oscillator.

#### Serial Port

Disco L475 IoT board has 6 U(S)ARTs. The Zephyr console output is assigned to UART1.
Default settings are 115200 8N1.

## Programming and Debugging

Disco L475 IoT board includes an ST-LINK/V2-1 embedded debug tool interface.

Applications for the `disco_l475_iot1` board configuration can be built and
flashed in the usual way (see [Building an Application](../../../../develop/application/index.md#build-an-application) and
[Run an Application](../../../../develop/application/index.md#application-run) for more details).

### Flashing

The board is configured to be flashed using west [STM32CubeProgrammer](https://www.st.com/en/development-tools/stm32cubeprog.html) runner,
so its [installation](../../../../develop/flash_debug/host-tools.md#stm32cubeprog-flash-host-tools) is required.

Alternatively, OpenOCD or JLink can also be used to flash the board using
the `--runner` (or `-r`) option:

```shell
$ west flash --runner openocd
$ west flash --runner jlink
```

#### Flashing an application to Disco L475 IoT

Here is an example for the [Hello World](../../../../samples/hello_world/README.md#hello_world "Print "Hello World" to the console.") application.

Connect the Disco L475 IoT to your host computer using the USB port, then
run a serial host program to connect with your Nucleo board. For example:

```shell
$ minicom -D /dev/ttyACM0
```

Then build and flash the application:

```shell
# From the root of the zephyr repository
west build -b disco_l475_iot1 samples/hello_world
west flash
```

You should see the following message on the console:

```shell
$ Hello World! arm
```

### Debugging

You can debug an application in the usual way. Here is an example for the
[Hello World](../../../../samples/hello_world/README.md#hello_world "Print "Hello World" to the console.") application.

```shell
# From the root of the zephyr repository
west build -b disco_l475_iot1 samples/hello_world
west debug
```
